syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.pk.jawolh.erecepta.common.record.proto";
option java_outer_classname = "PatientRecordProto";

message GetPatientRecordRequest {
  string patientId = 1;
}

message GetAllergiesRequest {
  string patientId = 1;
}

message GetPatientRecordReply {
  string bloodType = 1;
  double height = 2;
  double weight = 3;
  repeated string allergies = 4;
  repeated string chronicDiseases = 5;
  repeated string medications = 6;
}

message GetAllergiesReply {
  repeated string allergies = 1;
}

service PatientRecordService {
  rpc GetPatientRecord (GetPatientRecordRequest) returns (GetPatientRecordReply){}
  rpc GetAllergies (GetAllergiesRequest) returns (GetAllergiesReply) {}
}